bad/method_call_invalid_arg_conversion_class_to_bool.example_compiler_output
ERROR
[1mbad/method_call_invalid_arg_conversion_class_to_bool.lat:5:14: [1;31merror: [0;1mvalue of type `X` is not convertible to type `boolean`[m
	(new G).foo(new X);
	            [1;32m^[m
[1mbad/method_call_invalid_arg_conversion_class_to_bool.lat:10:2: [1;34mnote: [0;1m`foo` declared here[m
	void foo(boolean b) {}
	[1;32m^[m
